feat: Improve Supabase integration and auth flow
Refactors Supabase client setup to better handle environment variables, ensuring compatibility with different naming conventions (e.g., `VITE_` prefix vs. non-prefixed).

Introduces a polyfill for `process.env` in the browser to avoid build issues and enhances error handling in the authentication modal for clearer user feedback, specifically addressing cases where the Google provider is not enabled in Supabase.

Improves session checking logic in the Creator Studio for more robust user state management.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <script>
-        // Osigurava da process.env ne puca ako build alat (Vite) ne ubaci vrednosti na vreme
+        // Polyfill for process.env used by some libraries and our fallback logic
         window.process = window.process || { env: {} };
     </script>
     <style>
