fix: Enhance Supabase environment variable handling
Refactors environment variable loading and usage to be more robust and compatible across different build tools and deployment platforms.

- Updates `vite.config.ts` to more flexibly load Supabase URL and API keys, supporting `VITE_`, `NEXT_PUBLIC_`, and standard `SUPABASE_` prefixes.
- Modifies `supabaseClient.ts` to use a safer environment variable fetching mechanism, improving fallback logic and diagnostic messages.
- Adjusts `index.html` to provide a minimal `process.env.env` polyfill.
- Updates `tsconfig.json` to include Vite client types for better integration.
- Improves Google OAuth redirect logic in `AuthModal.tsx` by dynamically setting the `redirectTo` URL and adding console logs for debugging.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <script>
-        // Polyfill for process.env used by some libraries and our fallback logic
+        // Minimalni polyfill bez dodeljivanja lažnih vrednosti
         window.process = window.process || { env: {} };
     </script>
     <style>
@@ -28,7 +28,6 @@
           background: #4f46e5;
           color: white;
         }
-        /* Custom scrollbar */
         ::-webkit-scrollbar { width: 6px; }
         ::-webkit-scrollbar-track { background: #050505; }
         ::-webkit-scrollbar-thumb { background: #1e1e1e; border-radius: 10px; }
